# vector-embed-rust

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  docker-compose.yml  ollama.md
scripts/: rtr.txt  scratch.txt
src/: lib.rs  main.rs
src/app/: cli.rs  commands.rs  config.rs  constants.rs  mod.rs
src/chat/: chat_config.rs  chat_main.rs  mod.rs  model_options.rs  prompt_template.rs
src/config/: config.rs  mod.rs
src/docloader/: mod.rs
src/docsplitter/: code_loader.rs  mod.rs
src/embedder/: config.rs  mod.rs  run_embedding.rs  vector_embedding.rs
src/embedding/: mod.rs  run_embedding.rs  vector_embedding.rs
src/lancevectordb/: load_lancedb.rs  mod.rs  query.rs
src/loader/: code_loader.rs
src/pgvectordb/: mod.rs  pg_vector.rs  query_vector.rs  run_embedding.rs
src/scripts/: code_loader.rs  code_loader.rs.bkp  sample.txt  scratch.txt
src/tests/: lancedb_query_test.rs  load_lancedb_test.rs  mod.rs  pgclient_test.rs  setup_docker.rs  test_pgclient.rs  test_query_vector.rs  test_run_embedding.rs  test_vector_embedding.rs
src/vectordb/: mod.rs  pg_vector.rs  query_vector.rs  tests.rs
template/: chat_template.hbs  general_prompt.txt  prompt_template.hbs  prompt_template_if.hbs  rag_prompt.txt  sample.txt  scratch.txt  software-engineer.txt  spark-engineer.txt  spark_prompt.txt  system_prompt.txt
