[package]
name = "pg-vector-embed-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1", optional = true }
colog = "1.3.0"
env_logger = "0.11.5"
http = "1.2.0"
log = "0.4.22"
postgres = "0.19.9"
rand = "0.8.5"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
postgres-types = "0.2.8"
pgvector = { version = "0.4", features = ["postgres"] }
tokio-postgres = "0.7.12"
clap = { version = "4.5.13", features = ["derive"] }
mockall = "0.13.1"
