[package]
name = "vector-embed-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
clap = { version = "4.5.13", features = ["derive"] }
tree-sitter-rust = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-go = "0.23.4"
tree-sitter-typescript = "0.23.2"
tree-sitter-c = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-python = "0.23.6"
tree-sitter-javascript = "0.23.1"
tree-sitter-scala = "0.23.4"
tree-sitter-language = "0.1.3"
futures = "0.3.31"
arrow = "53.3.0"
arrow-array = "53.3.0"
lancedb = "0.15.0"
text-splitter = { version = "0.22.0", features = [
    "code",
    "markdown",
    "tiktoken-rs",
    "tokenizers",
] }
anyhow = "1.0.95"
arrow-schema = "53.3.0"
chrono = "0.4.39"
handlebars = "6.3.1"
